--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,29 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <!--    <meta name="theme-color" content="#000000" />-->
+<!--    <meta-->
+<!--      name="description"-->
+<!--      content="Web site created using create-react-app"-->
+<!--    />-->
+
+    <!-- Material UI responsive meta tag   -->
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="viewport"
+      content="minimum-scale=1, initial-scale=1, width=device-width"
     />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!--    Material UI Roboto Font CDN-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+
+    <!--    Material UI Font Icons CDN -->
+<!--    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />-->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
