--- a/public/index.html
+++ b/public/index.html
@@ -32,4 +32,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+
+  <script src="https://www.google.com/recaptcha/api.js"></script>
 </html>
