--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/web-programming.svg" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!--    Material UI Roboto Font CDN-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
@@ -33,5 +33,8 @@
     <div id="root"></div>
   </body>
 
-  <script src="https://www.google.com/recaptcha/api.js"></script>
+<!--  <script src="https://www.google.com/recaptcha/api.js"></script>-->
+  <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
+          async defer>
+  </script>
 </html>
