captcha verification complete

--- a/public/index.html
+++ b/public/index.html
@@ -27,14 +27,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 
     <title>kcmodev</title>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 
-<!--  <script src="https://www.google.com/recaptcha/api.js"></script>-->
-  <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
-          async defer>
-  </script>
+<!--  <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"-->
+<!--          async defer>-->
+<!--  </script>-->
 </html>
