--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/web-programming.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<!--    <meta name="theme-color" content="#000000" />-->
-<!--    <meta-->
-<!--      name="description"-->
-<!--      content="Web site created using create-react-app"-->
-<!--    />-->
+    <!--    <meta name="theme-color" content="#000000" />-->
+    <!--    <meta-->
+    <!--      name="description"-->
+    <!--      content="Web site created using create-react-app"-->
+    <!--    />-->
 
     <!-- Material UI responsive meta tag   -->
     <meta
@@ -24,7 +24,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!--    Material UI Roboto Font CDN-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
 
     <title>kcmodev</title>
     <script src="https://www.google.com/recaptcha/api.js"></script>
@@ -34,7 +37,7 @@
     <div id="root"></div>
   </body>
 
-<!--  <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"-->
-<!--          async defer>-->
-<!--  </script>-->
+  <!--  <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"-->
+  <!--          async defer>-->
+  <!--  </script>-->
 </html>
